added a sample service returning Ardalis.Result

--- a/src/Rel.Infrastructure/Rel.Infrastructure.csproj
+++ b/src/Rel.Infrastructure/Rel.Infrastructure.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Ardalis.Specification" Version="4.2.0" />
+    <PackageReference Include="Ardalis.Specification.EntityFrameworkCore" Version="4.2.0" />
     <PackageReference Include="Autofac" Version="5.0.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Ardalis.EFCore.Extensions" Version="1.1.0" />
