--- a/src/Rel.Core/Rel.Core.csproj
+++ b/src/Rel.Core/Rel.Core.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ardalis.GuardClauses" Version="1.3.3" />
+    <PackageReference Include="Ardalis.GuardClauses" Version="1.5.0" />
+    <PackageReference Include="Ardalis.Result" Version="3.1.0" />
+	<PackageReference Include="Ardalis.Specification" Version="4.2.0" />
   </ItemGroup>
 
   <ItemGroup>
