--- a/src/Rel.Web/appsettings.json
+++ b/src/Rel.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\v11.0;Database=Rel;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=Reldata;User Id=sa; Password=gelsomino@21;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "IncludeScopes": false,
