--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,16 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+
+
+# Run all tests with "/p:CollectCoverage=true /p:CoverletOutputFormat=cobertura'" to generate the code coverage
+
+
+
+
+# Publish the code coverage result (summary and web site)
+# The summary allows to view the coverage percentage in the summary tab
+# The web site allows to view which lines are covered directly in Azure Pipeline
+
+
+
